[workspace]
members = [
    "programs/asset_controller",
    "programs/data_registry",
    "programs/identity_registry",
    "programs/policy_engine",
    "rwa_utils"
]
resolver = "2"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor" }
anchor-spl = { git = "https://github.com/bridgesplit/anchor" }
rwa_utils = { path = "./rwa_utils" }