[package]
name = "asset_controller"
version = "0.0.1"
description = "The Asset Controller Program (ACP) enables core asset management functionality for newly issued assets, including transfer controls and transaction privacy."
authors = ["Bridgesplit Developers <developers@bridgesplit.com>"]
repository = "https://github.com/bridgesplit/rwa"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_controller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  { path = "../../../anchor/lang", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { path = "../../../anchor/spl", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
policy_registry = { path = "../policy_registry", features = ["cpi"] }
identity_registry = { path = "../identity_registry", features = ["cpi"] }