[package]
name = "asset_controller"
version = "0.0.1"
description = "The Asset Controller Program (ACP) enables core asset management functionality for newly issued assets, including transfer controls and transaction privacy."
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "asset_controller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
policy_engine = { path = "../policy_engine", features = ["cpi"] }
identity_registry = { path = "../identity_registry", features = ["cpi"] }