[package]
name = "asset_controller"
version = "0.0.1"
description = "The Asset Controller Program (ACP) enables core asset management functionality for newly issued assets, including transfer controls and transaction privacy."
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "asset_controller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { git = "https://github.com/bridgesplit/anchor", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.6.3" }
spl-tlv-account-resolution = "0.6.3"
policy_engine = { path = "../policy_engine", features = ["cpi"] }
identity_registry = { path = "../identity_registry", features = ["cpi"] }
data_registry = { path = "../data_registry", features = ["cpi"] }
rwa_utils = { path = "../rwa_utils" }
serde_json = "1.0"
spl-token-2022 = { version = "3.0.2", features = ["serde-traits"]}