[package]
name = "asset_registry"
version = "0.0.1"
description = "The Asset Controller Program (ACP) enables core asset management functionality for newly issued assets, including transfer controls and transaction privacy."
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "asset_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
policy_registry = { path = "../policy_registry", features = ["cpi"] }
identity_registry = { path = "../identity_registry", features = ["cpi"] }