[package]
name = "data_registry"
version = "0.0.1"
description = "The Data Registry Program (DRP) enables the ledger of generic asset data."
authors = ["Bridgesplit Developers <developers@bridgesplit.com>"]
repository = "https://github.com/bridgesplit/rwa"
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "data_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://git@github.com/bridgesplit/anchor" }
anchor-spl = { git = "https://git@github.com/bridgesplit/anchor" }
