[package]
name = "identity_registry"
version = "0.0.1"
description = "The Identity Registry Program (IRP) manages the configurable issuance and tracking of on-chain identities to enable on-chain transaction permissioning."
authors = ["Bridgesplit Developers <developers@bridgesplit.com>"]
repository = "https://github.com/bridgesplit/rwa"
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["token_2022_extensions", "token_2022"] }