[package]
name = "identity_registry"
version = "0.0.1"
description = "The Identity Registry Program (IRP) manages the configurable issuance and tracking of on-chain identities to enable on-chain transaction permissioning."
authors = ["Bridgesplit Developers <developers@bridgesplit.com>"]
repository = "https://github.com/bridgesplit/rwa"
edition = "2018"


[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1" }