[package]
name = "legal_registry"
version = "0.0.1"
description = "The Legal Registry Program (LRP) manages supporting legal documentation from the issuer, including operating agreements, EIN letters, appraisals, and more."
authors = ["Bridgesplit Developers <developers@bridgesplit.com>"]
repository = "https://github.com/bridgesplit/rwa"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "legal_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
