[package]
name = "policy_engine"
version = "0.0.1"
description = "The Policy Registry Program (PRP) enables the creation of policies that can be used to control the flow of funds in a programmatic way."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0" }
anchor-spl = { version = "0.30.0" }
num_enum = "0.7.2"
sha256 = "1.5.0"
