[package]
name = "policy_engine"
version = "0.0.1"
description = "The Policy Registry Program (PRP) enables the creation of policies that can be used to control the flow of funds in a programmatic way."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["interface-instructions", "event-cpi"]  }
anchor-spl = { workspace = true, features = ["token_2022_extensions"] }
rwa_utils = { workspace = true }
identity_registry = { path = "../identity_registry", features = ["no-entrypoint"] }

serde = "1.0"
num_enum = "0.7.2"
sha256 = "1.5.0"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = { version = "0.6.3" }
